--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -216,6 +216,18 @@ h4
   font-size:18px !important;
 }
 
+.input-form
+{
+  border:1px solid transparent !important;
+  background-color:#e9ebec !important;
+}
+
+.more-link
+{
+  font-size:12px !important;
+  text-decoration:underline;
+}
+
 /* CELULAR */
 @media only screen and (max-width: 768px) {
 	.user-name
