--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,12 +3,12 @@
   %li.active=link_to "Teste", "javascript:void(0);"
 
 .col-xs-7.metas
-  %h1 Metas
+  %h1.h1-home Metas
   
   = image_tag("template/grafico_marcacao.jpg", :class => "img-responsive")
   
 .col-xs-5.ultimos-pedidos
-  %h1 Últimos Pedidos
+  %h1.h1-home Últimos Pedidos
   
   %table.table.table-condensed
     %tr
@@ -34,7 +34,7 @@
 
   = link_to "Veja a lista completa", "#", :class => "pull-right more-link"
 .col-xs-7.comunicados
-  %h1 Comunicados
+  %h1.h1-home Comunicados
   
   .list-group
     %a.list-group-item.active
@@ -58,7 +58,7 @@
 
   = link_to "Veja todos os comunicados", "#", :class => "pull-right more-link"
 .col-xs-5.contatos
-  %h1 Contatos
+  %h1.h1-home Contatos
   %p Donec id elit non mi porta gravida at eget metus  aecenas sed diam.
   
   .panel.panel-default
