--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -2,7 +2,15 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$mainColor:#c77376;
+
 .banner
 {
   
+}
+
+.h1-home
+{
+  font-size:24px !important;
+  color:#333333;
 }
