frontend - biblioteca finalizada - faltam ajustes

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -269,6 +269,11 @@ h4
   color:#b74b4b;
 }
 
+.bottom-space-30
+{
+  margin-bottom:30px;
+}
+
 /* CELULAR */
 @media only screen and (max-width: 768px) {
 	.user-name
