--- a/app/assets/stylesheets/contacts.css.scss
+++ b/app/assets/stylesheets/contacts.css.scss
@@ -47,9 +47,20 @@ h2
     margin-top:23px;
   }
   
+  .file-list
+  {
+    margin-top:14px;
+  }
+  
   .profile-pic-big
   {
     margin:15px 0px 15px 0px;
+  }
+  
+  h2
+  {
+    font-size:14px !important;
+    color:#333333;
   }
 }
 
