--- a/app/views/contacts/index.html.haml
+++ b/app/views/contacts/index.html.haml
@@ -55,110 +55,119 @@
     %button.btn.btn-white Z
 
 .users  
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
-      
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
-      
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
-      
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
+        
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
+        
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
 
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
+        
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix  
+        
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
+        
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
 
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva Sauro Manteiga
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
-      
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix  
 
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
-
-  .col-sm-4.data-box
-    .col-sm-12.info-box
-      .col-sm-4
-        = image_tag("template/profile_pic.jpg", :class =>"picture-list")
-      .col-sm-8
-        %h2 João da Silva
-        %p 
-          email@email.com <br />
-          00 00000-0000 <br />
-          00 00000-0000
-      .clearfix
+  .col-sm-4.bottom-space-30
+    .col-sm-12.data-box
+      .col-sm-12.info-box
+        .col-sm-4
+          = image_tag("template/profile_pic.jpg", :class =>"picture-list")
+        .col-sm-8
+          %h2 João da Silva
+          %p 
+            email@email.com <br />
+            00 00000-0000 <br />
+            00 00000-0000
+        .clearfix
