--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -274,6 +274,11 @@ h4
   margin-bottom:30px;
 }
 
+.red
+{
+  color:$mainColor;
+}
+
 /* CELULAR */
 @media only screen and (max-width: 768px) {
 	.user-name
