--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -27,7 +27,7 @@
   =t(".seller") 
   <br/> 
   -if @user.role.to_s == "supervisor" 
-    %h3=t(".team_users")
+    %h3=t("team_users")
     -User.all.each do |user|
       = check_box_tag 'user[collaborator_ids][]', user.id, @user.collaborators.include?(user), :class=> "input_radio" if user.id != @user.id
       = user.username  if user.id != @user.id 
