--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,6 +1,14 @@
--title t ".title", :resource =>  @user.username
+%ol.breadcrumb
+  %li=link_to "Home", "javascript:void(0);"
+  %li=link_to "Usuários", "javascript:void(0);"
 
-%h1=t ".title", :resource =>  @user.username
+.row
+  .col-xs-9
+    %h1 Editar Usuário
 
-=render 'form'
+- if flash[:error]
+  .alert.alert-danger
+    %b Ops!
+    Está faltando alguma coisa
 
+= render :partial => "form"
