--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,6 +1,16 @@
--title t(".title")
+%ol.breadcrumb
+  %li=link_to "Home", "javascript:void(0);"
+  %li=link_to "Usuários", "javascript:void(0);"
 
-%h1=t(".title")
+.row
+  .col-xs-9
+    %h1 Novo Usuário
 
-=render 'form'
+- if flash[:error]
+  .alert.alert-danger
+    %b Ops!
+    Está faltando alguma coisa
+
+= render :partial => "form"
+
 
