--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the orders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.aprovado
+{
+  color:Yellow !important;
+}
+
+.enviado
+{
+  color:Blue;
+}
+
+.entregue
+{
+  color:Green;
+}
+
+.producao
+{
+  color:Orange;
+}
