--- a/app/views/contacts/_form.html.haml
+++ b/app/views/contacts/_form.html.haml
@@ -3,6 +3,7 @@
     = form_for @contact do |f|    
       %p.form-msg-danger Este campo está incorreto:
       -#%input.form-control.form-danger{:type => "text", :placeholder => "Nome Completo"}
+      = f.hidden_field :user_id, :value => current_user.id.to_s
       = f.text_field :name, :class => "form-control", :placeholder => "Nome Completo"
       <br />
       = f.text_field :email, :class => "form-control", :placeholder => "E-mail"
