--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -2,22 +2,43 @@
   %li=link_to "Home", root_path
   %li.active=link_to "Usuários", users_path
 
-%p= link_to "+ "+  ::User.model_name.human, new_user_path, :class => "btn btn-default"
+.row
+  .col-xs-9
+    %h1 Usuários
+  .col-xs-3
+    =link_to "+ "+  ::User.model_name.human, new_user_path, :class => "btn btn-default pull-right header-button"
 
-%table.col-xs-12
-  %tr
-    %th=t("activerecord.attributes.user.username")
-    %th=t("activerecord.attributes.user.email")   
-    %th=t("activerecord.attributes.user.role")  
-  - for user in @users
+- if flash[:notice]
+  .alert.alert-success
+    %b Concluído! 
+    Registro modificado com
+    %b sucesso!
+
+.col-xs-12.search
+  %form
+    .col-xs-11
+      %label.sr-only
+        Busca
+      %input.form-control.input-form{:name => "search"}
+    .col-xs-1
+      %input.btn.btn-default{:type => "submit", :value => "Buscar"}
+  .clearfix
+
+.users  
+  %table.col-xs-12.table.table-condensed
     %tr
-      %td= user.username
-      %td= user.email
-      %td= user.role
-      %td
-        =link_to t("show"), user_path(user), :class => "btn btn-info"
-        =link_to t("edit"), edit_user_path(user), :class => "btn btn-info"
-        =link_to t("delete"), user, :confirm => t("msg_delete"), :method => :delete, :class => "btn btn-info"
-        =link_to t("team_users"), teams_user_path(user), :class => "btn btn-info" if  user.role.to_s == "supervisor"
+      %th=t("activerecord.attributes.user.username")
+      %th=t("activerecord.attributes.user.email")   
+      %th=t("activerecord.attributes.user.role")
+      %th
+    - for user in @users
+      %tr
+        %td= user.username
+        %td= user.email
+        %td= user.role
+        %td
+          =link_to t("show"), user_path(user), :class => "btn btn-white"
+          =link_to t("edit"), edit_user_path(user), :class => "btn btn-white"
+          =link_to t("delete"), user, :confirm => t("msg_delete"), :method => :delete, :class => "btn btn-white"
+          =link_to t("team_users"), teams_user_path(user), :class => "btn btn-white" if  user.role.to_s == "supervisor"
         
-%p= link_to "+ "+  ::User.model_name.human, new_user_path, :class => "btn btn-default"
