Ajuste de front

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -14,3 +14,9 @@ $mainColor:#c77376;
   font-size:24px !important;
   color:#333333;
 }
+
+
+.list-group-item-text
+{
+  cursor:pointer !important;
+}
