--- a/app/views/bulletins/new.html.haml
+++ b/app/views/bulletins/new.html.haml
@@ -1,3 +1,10 @@
+-content_for :scripts do
+  :javascript
+    $(".list-group-item-text").click(function() {
+      window.location.href = '/bulletins/' + $(this).attr("id");
+    });
+
+
 %ol.breadcrumb
   %li=link_to "Home", "javascript:void(0);"
   %li=link_to "Comunicados", "javascript:void(0);"
